# TextEditor

./: .gitignore  CMakeLists.txt  README.md  ReadMe.docx
QTGui/: CMakeLists.txt  customtextedit.cpp  customtextedit.h  mainwindow.cpp  mainwindow.h  resources.qrc
Test/: CMakeLists.txt  DocumentTests.cpp  FileManagerTests.cpp  TestCommons.h  TextManagerTests.cpp  main.cpp
TextEditor/: FileManager.cpp  FileManager.h  TextManager.cpp  TextManager.h
TextEditorCore/: CMakeLists.txt  FileIOListener.h  FileManager.cpp  FileManager.h  TextEditor.h  TextManager.cpp  TextManager.h
TextEditorCore/include/TextEditorCore/: Document.h  FileManager.h  IDocumentListener.h  IFileIOListener.h  ITextEditorListener.h  TextManager.h
TextEditorCore/src/: Document.cpp  FileManager.cpp  TextManager.cpp
